--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ button {
     display: inline-block;
     border-radius: 7px;
     border: none;
-    background: #1875FF;
+    background: #ff1818;
     color: white;
     font-family: inherit;
     text-align: center;
     font-size: 13px;
-    box-shadow: 0px 14px 56px -11px #1875FF;
+    box-shadow: 0px 14px 56px -11px #ff1818;
     width: 10em;
     padding: 1em;
     transition: all 0.4s;
